--- a/qemui/NewVM.xaml
+++ b/qemui/NewVM.xaml
@@ -5,9 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:qemui"
         mc:Ignorable="d"
+        Loaded="Window_Loaded"
         Title="New VM" Height="395.404" Width="509" ShowInTaskbar="False" ResizeMode="NoResize">
     <Window.Resources>
         <local:RAMSliderConverter x:Key="RAMSliderConverter"/>
+        <ContextMenu x:Key="DriveMenu">
+            <MenuItem Header="Import" InputGestureText="Ctrl+O" Click="Import_Drive"/>
+            <MenuItem Header="Create" InputGestureText="Ctrl+N" Click="Create_Drive"/>
+            <MenuItem Header="Remove" InputGestureText="Delete" Click="Remove_Drive"/>
+        </ContextMenu>
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
